# TouchDecoder

./: CMakeLists.txt  LICENSE  README.md
src/lib/: CMakeLists.txt  data.cpp  test.hpp  touchdecoder.hpp
src/main/: main.cpp
src/tests/: CMakeLists.txt  tests.cpp
